--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,7 @@ console_scripts =
     paprika-recipe = paprika_recipe.cmdline:main
 paprika_recipe.commands =
     export-to-directory = paprika_recipe.commands.export_to_directory:Command
+    import-from-directory = paprika_recipe.commands.import_from_directory:Command
 
 [flake8]
 # https://github.com/ambv/black#line-length
