Adding readme instructions; updating a couple command names.

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,8 +20,8 @@ packages =
 console_scripts =
     paprika-recipe = paprika_recipe.cmdline:main
 paprika_recipe.commands =
-    export-to-directory = paprika_recipe.commands.export_to_directory:Command
-    import-from-directory = paprika_recipe.commands.import_from_directory:Command
+    extract-archive = paprika_recipe.commands.extract_archive:Command
+    create-archive = paprika_recipe.commands.create_archive:Command
 
 [flake8]
 # https://github.com/ambv/black#line-length
