Adding support for downloading recipes from your paprika account.

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,8 @@ console_scripts =
 paprika_recipe.commands =
     extract-archive = paprika_recipe.commands.extract_archive:Command
     create-archive = paprika_recipe.commands.create_archive:Command
+    store-password = paprika_recipe.commands.store_password:Command
+    download-recipes = paprika_recipe.commands.download_recipes:Command
 
 [flake8]
 # https://github.com/ambv/black#line-length
