--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ paprika_recipe.commands =
     create-archive = paprika_recipe.commands.create_archive:Command
     store-password = paprika_recipe.commands.store_password:Command
     download-recipes = paprika_recipe.commands.download_recipes:Command
+    upload-recipes = paprika_recipe.commands.upload_recipes:Command
 
 [flake8]
 # https://github.com/ambv/black#line-length
