Adding command allowing you to interactively create a recipe.

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,7 @@ paprika_recipe.commands =
     store-password = paprika_recipe.commands.store_password:Command
     download-recipes = paprika_recipe.commands.download_recipes:Command
     upload-recipes = paprika_recipe.commands.upload_recipes:Command
+    create-recipe = paprika_recipe.commands.create_recipe:Command
 
 [flake8]
 # https://github.com/ambv/black#line-length
