Adding 'edit-recipe' command and updating readme to be a little more descriptive.

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ paprika_recipe.commands =
     download-recipes = paprika_recipe.commands.download_recipes:Command
     upload-recipes = paprika_recipe.commands.upload_recipes:Command
     create-recipe = paprika_recipe.commands.create_recipe:Command
+    edit-recipe = paprika_recipe.commands.edit_recipe:Command
 
 [flake8]
 # https://github.com/ambv/black#line-length
