I've decided this should've been pluralized this whole time.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,11 @@
 [metadata]
-name = paprika-recipe
+name = paprika-recipes
 author = Adam Coddington
 author-email = me@adamcoddington.net
 summary = Easily view and edit the contents of exports from the Paprika app.
 description-file = readme.md
 description-content-type = text/markdown; charset=UTF-8
-home-page = https://github.com/coddingtonbear/paprika-recipe/
+home-page = https://github.com/coddingtonbear/paprika-recipes/
 license = MIT
 classifier =
     Development Status :: 4 - Beta
@@ -14,19 +14,19 @@ classifier =
 
 [files]
 packages =
-    paprika_recipe
+    paprika_recipes
 
 [entry_points]
 console_scripts =
-    paprika-recipe = paprika_recipe.cmdline:main
-paprika_recipe.commands =
-    extract-archive = paprika_recipe.commands.extract_archive:Command
-    create-archive = paprika_recipe.commands.create_archive:Command
-    store-password = paprika_recipe.commands.store_password:Command
-    download-recipes = paprika_recipe.commands.download_recipes:Command
-    upload-recipes = paprika_recipe.commands.upload_recipes:Command
-    create-recipe = paprika_recipe.commands.create_recipe:Command
-    edit-recipe = paprika_recipe.commands.edit_recipe:Command
+    paprika-recipes = paprika_recipes.cmdline:main
+paprika_recipes.commands =
+    extract-archive = paprika_recipes.commands.extract_archive:Command
+    create-archive = paprika_recipes.commands.create_archive:Command
+    store-password = paprika_recipes.commands.store_password:Command
+    download-recipes = paprika_recipes.commands.download_recipes:Command
+    upload-recipes = paprika_recipes.commands.upload_recipes:Command
+    create-recipe = paprika_recipes.commands.create_recipe:Command
+    edit-recipe = paprika_recipes.commands.edit_recipe:Command
 
 [flake8]
 # https://github.com/ambv/black#line-length
